src/program/snapshots/quil_rs__program__graph__tests__graph__fence_all.snap
---
source: src/program/graph.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="frame"];
    "block_0_start" -> "block_0_end" [label="ordering"];
    "block_0_0" [label="FENCE"];
    "block_0_0" -> "block_0_end" [label="frame"];
    "block_0_end" [shape=circle, label="end"];
  }
}

