src/program/snapshots/quil_rs__program__graph__tests__graph__pulse_after_capture.snap
---
source: quil/src/program/graph.rs
expression: "ProgramDebugWrapper{program: &scheduled_program,}"

---
digraph {
	entry [label="Entry Point"]
	entry -> "block_0_start"
	subgraph "cluster_block_0" {
		label="block_0"
		node [ style="filled" ]
		"block_0_start" [ label=start, shape=circle ]
		"block_0_start" -> "block_0_0" [ label="frame" ]
		"block_0_start" -> "block_0_end" [ label="ordering" ]
		"block_0_0" [label="CAPTURE 0 \"ro_rx\" test() ro[0]"]
		"block_0_0" -> "block_0_1" [ label="frame" ]
		"block_0_0" -> "block_0_end" [ label="await capture" ]
		"block_0_1" [label="PULSE 0 \"rf\" test()"]
		"block_0_1" -> "block_0_end" [ label="frame" ]
		"block_0_end" [ label=end, shape=circle ]
	}
}

